--- a/blog-frontend/src/App.css
+++ b/blog-frontend/src/App.css
@@ -2,6 +2,18 @@
   text-align: center;
 }
 
+.black-nav{
+  background: black;
+  width: 100%;
+  display: flex;
+  color:white;
+  padding: 20px;
+}
+
+.specialComment{
+  padding-left: 10px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
