--- a/blog-frontend/src/App.css
+++ b/blog-frontend/src/App.css
@@ -10,6 +10,20 @@
   padding: 20px;
 }
 
+.list{
+  text-align: left;
+  padding-top:10px;
+  padding-left: 20px;
+  border-bottom: 1px solid grey;
+}
+
+.modalComp{
+  margin-top:20px;
+  padding: 20px;
+  background:#eee;
+  text-align:left;
+}
+
 .specialComment{
   padding-left: 10px;
 }
