--- a/blog-frontend/src/App.css
+++ b/blog-frontend/src/App.css
@@ -13,7 +13,7 @@ div {
   border-bottom: 1px solid grey;
 }
 
-.modalComp{
+.modal-window{
   margin-top:20px;
   padding: 20px;
   background:#eee;
