--- a/blog-frontend/src/App.css
+++ b/blog-frontend/src/App.css
@@ -9,7 +9,7 @@ div {
 .list {
   text-align: left;
   padding-top: 10px;
-  padding-left: 20px;
+  padding-left: 50px;
   border-bottom: 1px solid grey;
 }
 
@@ -22,6 +22,10 @@ div {
 
 .specialComment{
   padding-left: 10px;
+}
+
+.input-information{
+  padding-top:20px;
 }
 
 .App-logo {
